<resources>
    <string name="app_name">Tasks7</string>
    <string name="donut_order_message">You ordered a donut</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich</string>
    <string name="froyo_order_message">You ordered a FroYo</string>

    <string name="donut_description">Donuts are glazed and sprinkled with candy</string>
    <string name="icecream_description">Ice cream sandwiches have chocolate wafers and vanilla filling</string>
    <string name="froyo_description">FroYo is premium self-serve frozen yogurt</string>

    <string name="chosen">Chosen</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
</resources>