<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/order_intro_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Choose a delivery method:"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="20dp"/>

    <RadioGroup android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30dp">
        <RadioButton
            android:id="@+id/sameday"
            android:layout_width= "wrap_content"
            android:layout_height= "wrap_content"
            android:text ="@string/same_day_messenger_service"
            android:onClick ="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/nextday"
            android:layout_width= "wrap_content"
            android:layout_height= "wrap_content"
            android:text ="@string/next_day_ground_delivery"
            android:onClick ="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/pickup"
            android:layout_width= "wrap_content"
            android:layout_height= "wrap_content"
            android:text ="@string/pick_up"
            android:onClick ="onRadioButtonClicked"/>
    </RadioGroup>
</LinearLayout>