<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Droid Desserts"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Choose a dessert:"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp">

        <ImageView
            android:layout_width="180dp"
            android:layout_height ="match_parent"
            android:src= "@drawable/donut_circle"
            android:onClick="showDonutOrder"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/donut_description"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:src="@drawable/icecream_circle"
            android:onClick="showIceCreamOrder"/>

        <TextView
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/icecream_description" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/froyo"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:src="@drawable/froyo_circle"
            android:onClick="showFroyoOrder"/>

        <TextView
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/froyo_description" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:onClick="goToOrderActivity"
        android:text="CHOOSE DELIVERY METHOD" />


</LinearLayout>